--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ProfileFragment">
+    tools:context=".activities.mainFeatures.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
