working signup w/ firebase

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             android:text="Login" />
 
         <!-- Sign Up Link -->
-        <TextView
+        <Button
             android:id="@+id/signinButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
