--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingBottom="25dp"
+    android:paddingHorizontal="15dp"
     tools:context=".activities.mainFeatures.ReviewsActivity">
 
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/reviewWidget"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
@@ -32,9 +33,18 @@
                 android:id="@+id/reviewsListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#79FDD22C"
                 android:divider="@android:color/darker_gray"
                 android:dividerHeight="1dp" />
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/leaveReview"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Leave Review" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
