--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -68,8 +68,8 @@
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/c"
                 android:layout_margin="10dp"
+                android:background="@color/white"
                 android:id="@+id/camera_gallery_btn"/>
 
 
