changed status bar + navbar theme
-androidmanifest.xml now has the correct theme
-ALL CHANGE TO THE THEME SHOULD HAPPEN IN THEMES.XML

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/toolbar_message"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/Theme.AppCompat.DayNight"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
             android:background="@color/red">
 
             <de.hdodenhof.circleimageview.CircleImageView
