--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -91,6 +91,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Open Chat"/>
+        <Button
+            android:id="@+id/buttonBlock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Block User"/>
     </LinearLayout>
 
 </FrameLayout>
